sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/ParenthesizedExpression.sand
pub class ParenthesizedExpression {
    foo() {
        [
            (a),
            (a + b),
            (a()),
            ("foo"),
        ]
    }
}