sandc/test/fixtures/astRegression/shouldFail/productions/castExpression/NonTypeConstruct.sand
pub class NonTypeConstruct {
    foo() {
        a as "foo"
    }
}